# clap-clap-wake-up

./: .gitignore  DESIGN.md  README.md  clap-wake.ps1  pyproject.toml
clap_wake/: app_main.py  audio.py  autostart.py  cli.py  config.py  dashboard.py  discovery.py  env_utils.py  invocation.py  launcher.py  media.py  permissions.py  player.py  realtime_localhost.py  runtime_control.py  service.py  sound_library.py  tray.py  window_layout.py  youtube_cache.py
tests/: test_audio.py  test_cli.py  test_config.py  test_discovery.py  test_invocation.py  test_media.py  test_permissions.py  test_realtime_localhost.py  test_runtime_control.py  test_service.py  test_window_layout.py  test_youtube_cache.py
